# openclaw-test

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
castgesture/: README.md  __init__.py  requirements.txt  run.py
castgesture/config/: default_mappings.yml
castgesture/config/sounds/: README.md
castgesture/extension/: background.js  content.js  effects.js  manifest.json  popup.html  popup.js  styles.css
castgesture/landing/: index.html
castgesture/overlay/: index.html
castgesture/panel/: index.html
castgesture/server/: __init__.py  app.py  config.py  demo.py  effects.py  mappings.py  obs_integration.py  sounds.py  twitch_integration.py
castgesture/tests/: test_effects.py  test_mappings.py  test_server.py
config/: actions.example.yml
docs/: API.md  ARCHITECTURE.md  PROTOCOL.md
examples/: benchmark.py  demo_collect.py  demo_webcam.py  gestures.json
examples/web_demo/: canvas.html  index.html
plugins/: example_logger.py
src/gesture_engine/: __init__.py  __main__.py  actions.py  bimanual.py  canvas.py  classifier.py  cli.py  detector.py  export.py  gestures.py  metrics.py  pipeline.py  plugins.py  profiler.py  recorder.py  sequences.py  server.py  trajectory.py
tests/: test_actions.py  test_bimanual.py  test_canvas.py  test_classifier.py  test_detector.py  test_edge_cases.py  test_export.py  test_gestures.py  test_integration.py  test_metrics.py  test_pipeline_v2.py  test_plugins.py  test_profiler.py  test_recorder.py  test_sequences.py  test_server.py  test_stress.py  test_trajectory.py
unity/com.gestureengine.sdk/: CHANGELOG.md  LICENSE  README.md  package.json
unity/com.gestureengine.sdk/Documentation~/: manual.md
unity/com.gestureengine.sdk/Editor/: GestureBindingDrawer.cs  (+2 more)
(+19 files in other folders)
